--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IMD232 FINAL 김승혁 201920205</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="./src/img/img2.png" width="25%" alt="" />
+    <div class="div1">
+      <img src="./src/img/img1.png" width="25%" alt="" />
+    </div>
+    <div class="div2">
+      <img src="./src/img/img2.jpg" width="25%" alt="" />
+    </div>
   </body>
 </html>
