--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </div>
     <div class="div2">
       <img src="./src/img/img2.jpg" width="25%" alt="" />
+      <div class="textbox">
+        출처: https://namu.wiki/w/%EC%A3%84%EC%86%A1%ED%95%A9%EB%8B%88%EB%8B%A4
+      </div>
     </div>
   </body>
 </html>
